Migración de adaptadores a Jakarta JAXB 4.0.1